# num_ops

./: .gitignore  Cargo.toml  README.md  flake.nix  readme.md  result
.direnv/: flake-tmp-profile.303146  flake-tmp-profile.303146-1-link
script/: release.nu
src/: bits.rs  bound.rs  checked.rs  checked2.rs  from_prim.rs  lib.rs  overflowing.rs  pow.rs  prim.rs  quick_access.rs  root.rs  sign.rs  signed.rs  to_prim.rs  to_prim_float.rs  to_prim_int.rs  trig.rs  unsigned.rs  wrapping.rs
